add some cool animation

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--title -->
-
     <title>Solo-creative website</title>
+
+    <!--  Basic SEO -->
+    <meta name="description" content="Creative website development with html5,css3,jquery & bootsrap framwork">
+    <meta name="kwywords" content="HTML5, CSS3, JQuery, Bootstrap, web Design, Development, Responsive website, creative website"> 
 
     <!-- fevicon -->
     <link rel="shortcut icon" href="img/favicon/favicon.ico">
@@ -170,7 +173,7 @@
                     <!-- 1st row -->
                     <div class="row">
                         <!-- about left side -->
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-6 col-sm-6 wow fadeInLeft" data-wow-duration="1s">
 
                             <div id="about-left">
 
@@ -183,7 +186,7 @@
 
                         </div>
                         <!-- about right side  -->
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-6 col-sm-6 wow fadeInRight" data-wow-duration="1s">
                             <div id="about-right">
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                                     Commodi necessitatibus facilis doloremque sapiente suscipit
@@ -204,7 +207,7 @@
                     <!-- 2nd row -->
                     <!-- about bottom -->
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-12 wow fadeInUp" data-wow-duration="2s">
                             <div id="about-bottom">
                                 <img src="img/about/about.png" alt="About Us" class="img-responsive">
                             </div>
@@ -223,7 +226,8 @@
             <div class="content-box-md">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4 col-sm-4">
+                        <!-- About item01 -->
+                        <div class="col-md-4 col-sm-4 wow fadeInLeft">
 
                             <div class="about-item text-center">
                                 <i class="fa fa-rocket"></i>
@@ -234,7 +238,8 @@
                             </div>
 
                         </div>
-                        <div class="col-md-4 col-sm-4">
+                        <!-- About item 02 -->
+                        <div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-duration="2s">
 
                             <div class="about-item text-center">
                                 <i class="fa fa-eye"></i>
@@ -245,7 +250,8 @@
                             </div>
 
                         </div>
-                        <div class="col-md-4 col-sm-4">
+                        <!-- About item 02 -->
+                        <div class="col-md-4 col-sm-4 wow fadeInRight">
 
                             <div class="about-item text-center">
                                 <i class="fa fa-pencil"></i>
@@ -275,7 +281,7 @@
                 <div class="row">
 
                     <!-- Team left side -->
-                    <div class="col-md-6 col-sm-6">
+                    <div class="col-md-6 col-sm-6 wow slideInLeft" data-wow-duration="1s">
                         <div id="team-left">
 
                             <div class="vertical-heading">
@@ -292,7 +298,7 @@
                     </div>
 
                     <!-- Team Right side -->
-                    <div class="col-md-6 col-sm-6">
+                    <div class="col-md-6 col-sm-6 wow slideInRight" data-wow-duration="1s">
 
                         <div id="team-members" class="owl-carousel owl-theme">
 
@@ -434,7 +440,7 @@
 
                     <!-- Progress Bar -->
 
-                    <div class="row">
+                    <div class="row wow fadeInUp">
 
                         <div class="col-md-6 col-sm-6">
 
@@ -513,7 +519,7 @@
 
                 <div class="row">
 
-                    <div class="col-md-12">
+                    <div class="col-md-12 wow fadeIn">
 
                         <div id="tech-statement" class="text-center">
                             <h3><i class="fa fa-quote-left"></i> We design and develop services for customers of all
@@ -549,7 +555,7 @@
 
                     <div class="row">
 
-                        <div class="col-md-12 text-center">
+                        <div class="col-md-12 text-center wow slideInDown">
 
                             <div class="horizontal-heading">
                                 <h5>What We Do</h5>
@@ -562,13 +568,13 @@
 
                     <div class="row">
 
-                        <div class="col-md-7 col-sm-7">
+                        <div class="col-md-7 col-sm-7 wow slideInLeft">
 
                             <img src="img/services/laptop-lamp.png" alt="laptop" class="img-responsive">
 
                         </div>
 
-                        <div class="col-md-5 col-sm-5">
+                        <div class="col-md-5 col-sm-5 wow slideInRight">
 
                             <!-- Service 01 -->
                             <div class="service">
@@ -666,7 +672,7 @@
                                             possimus repudiandae quo dolore blanditiis sed magni ullam harum.
                                         </p>
 
-                                        <div id="services-02-btn">
+                                        <div id="services-02-btn-01">
                                             <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
                                                 role="button">Get In Touch</a>
                                         </div>
@@ -698,7 +704,7 @@
                                             possimus repudiandae quo dolore blanditiis sed magni ullam harum.
                                         </p>
 
-                                        <div id="services-02-btn">
+                                        <div id="services-02-btn-02">
                                             <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
                                                 role="button">Get In Touch</a>
 
@@ -731,7 +737,7 @@
                                             possimus repudiandae quo dolore blanditiis sed magni ullam harum.
                                         </p>
 
-                                        <div id="services-02-btn">
+                                        <div id="services-02-btn-03">
                                             <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
                                                 role="button">Get In Touch</a>
 
@@ -764,7 +770,7 @@
                                             possimus repudiandae quo dolore blanditiis sed magni ullam harum.
                                         </p>
 
-                                        <div id="services-02-btn">
+                                        <div id="services-02-btn-04">
                                             <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
                                                 role="button">Get In Touch</a>
 
@@ -794,7 +800,7 @@
 
                 <div class="row">
 
-                    <div class="col-md-12">
+                    <div class="col-md-12 wow slideInLeft">
 
                         <div class="vertical-heading">
                             <h5>Find Out Work</h5>
@@ -824,7 +830,7 @@
             </div>
 
             <!-- Portfolio Items Wrapper -->
-            <Section id="portfolio-wrapper">
+            <Section id="portfolio-wrapper" class="wow fadeInUp"  data-wow-duration="1s"  data-wow-delay=".5s">
 
                 <div class="container-fluid">
 
@@ -1064,7 +1070,7 @@
 
             <div class="row">
 
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow slideInLeft">
 
                     <div class="vertical-heading">
                         <h5>Who We Are</h5>
@@ -1073,7 +1079,7 @@
 
                 </div>
 
-                <div class="col-md-8  col-sm-8">
+                <div class="col-md-8  col-sm-8 wow fadeIn" data-wow-duration="2s">
 
                     <div id="testimonial-slider" class="owl-carousel owl-theme">
                         <!-- Testimonial 01 -->
@@ -1229,7 +1235,7 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="col-md-12 text-center">
+                    <div class="col-md-12 text-center wow slideInDown">
                         <div class="horizontal-heading">
                             <h5>Lovely Customers</h5>
                             <h2>Our Pricing</h2>
@@ -1240,7 +1246,7 @@
 
                 <div class="row">
 
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-sm-4 wow fadeInLeft">
 
                         <!-- Pricing Table 01 -->
                         <div class="pricing-table">
@@ -1269,7 +1275,7 @@
                                 <li><i class="fa fa-check"></i>10 Free Web Sites</li>
                             </ul>
 
-                            <div id="pricing-btn">
+                            <div id="pricing-btn-01">
                                 <a class="btn btn-general btn-yellow" href="#" title="Get Started" role="button">Get
                                     Started</a>
                             </div>
@@ -1279,7 +1285,7 @@
 
                     </div>
 
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-duration="3s">
 
                         <!-- Pricing Table 02 -->
                         <div class="pricing-table black">
@@ -1308,7 +1314,7 @@
                                 <li><i class="fa fa-check"></i>10 Free Web Sites</li>
                             </ul>
 
-                            <div id="pricing-btn">
+                            <div id="pricing-btn-02">
                                 <a class="btn btn-general btn-white" href="#" title="Get Started" role="button">Get
                                     Started</a>
                             </div>
@@ -1318,7 +1324,7 @@
 
 
                     </div>
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-sm-4 wow fadeInRight">
 
                         <!-- Pricing Table 03 -->
                         <div class="pricing-table">
@@ -1347,7 +1353,7 @@
                                 <li><i class="fa fa-check"></i>10 Free Web Sites</li>
                             </ul>
 
-                            <div id="pricing-btn">
+                            <div id="pricing-btn-03">
                                 <a class="btn btn-general btn-yellow" href="#" title="Get Started" role="button">Get
                                     Started</a>
                             </div>
@@ -1377,7 +1383,7 @@
 
                 <div class="row">
 
-                    <div class="col-md-12">
+                    <div class="col-md-12 wow slideInLeft">
 
                         <div class="vertical-heading">
                             <h5>Fun Fact</h5>
@@ -1389,7 +1395,7 @@
                 </div>
 
 
-                <div class="row">
+                <div class="row wow fadeInUp" data-wow-duration="2s">
 
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <!-- Stats Item 01 -->
@@ -1448,7 +1454,7 @@
 
             <div class="container">
 
-                <div class="row">
+                <div class="row wow bounceInLeft" data-wow-duration="1s" data-wow-delay=".5s">
 
                     <div class="col-md-12 text-center">
 
@@ -1521,7 +1527,7 @@
 
                 <div class="row">
 
-                    <div class="col-md-5 col-sm-4">
+                    <div class="col-md-5 col-sm-4 wow slideInLeft">
 
                         <div id="blog-left">
                             <div class="vertical-heading">
@@ -1544,7 +1550,7 @@
 
                     <div class="col-md-7 col-sm-8">
 
-                        <div class="row">
+                        <div class="row wow fadeInUp" data-wow-duration="3s">
                             <div class="col-md-6 col-sm-6">
                                 <!-- Blog Post 01 -->
                                 <div class="blog-post">
@@ -1566,7 +1572,7 @@
                                                         alt="author">Kawser Ahmed</p>
                                             </div>
 
-                                            <div class="col-md-4 col-xs-7">
+                                            <div class="col-md-6 col-sm-4 col-xs-7">
                                                 <p class="text-right">October 02,2020</p>
                                             </div>
                                         </div>
@@ -1650,8 +1656,8 @@
                                         <div class="office">
                                             <h4>Bangladesh</h4>
                                             <ul class="office-details">
-                                                <li><i class="fa fa-mobile"></i>+8801815718918</li>
-                                                <li><i class="fa fa-envelope-o"></i>mdrezvee@gmail.com</li>
+                                                <li><i class="fa fa-mobile"></i><span>+8801815718918</span></li>
+                                                <li><i class="fa fa-envelope"></i><span>mdrezvee@gmail.com</span></li>
                                                 <li><i class="fa fa-map-marker"></i><span>112,Arman khan Goli, 9/A,
                                                         Dhanmodi,Dhaka-1209</span></li>
                                             </ul>
@@ -1662,8 +1668,8 @@
                                         <div class="office">
                                             <h4>Bangladesh</h4>
                                             <ul class="office-details">
-                                                <li><i class="fa fa-mobile"></i>+8801622908030</li>
-                                                <li><i class="fa fa-envelope-o"></i>mdrezvee03@gmail.com</li>
+                                                <li><i class="fa fa-mobile"></i><span>+8801622908030</span></li>
+                                                <li><i class="fa fa-envelope"></i><span>mdrezvee03@gmail.com</span></li>
                                                 <li><i class="fa fa-map-marker"></i><span>112,Chairman Goli, 9/A,
                                                         Dhanmodi,Dhaka-1209</span></li>
                                             </ul>
@@ -1806,9 +1812,7 @@
     <script src="js/counter/jquery.counterup.min.js"></script>
 
     <!-- Google map js -->
-
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTvQQzglGUKwhoVJu2nbQWzXgP2TL0Y8o">
-    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTvQQzglGUKwhoVJu2nbQWzXgP2TL0Y8o"></script>
 
     <!-- WOW JS -->
     <script src="js/wow/wow.min.js"></script>
