--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
                 <div id="home-text">
                     <p>Lorem ipsum dolor sit,amet consectetur adipisicing amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit,amet consectetur adipisicing amet consectetur adipisicing elit.</p>
                 </div>
 
                 <div id="home-btn">
