--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <!--  Basic SEO -->
     <meta name="description" content="Creative website development with html5,css3,jquery & bootsrap framwork">
-    <meta name="kwywords" content="HTML5, CSS3, JQuery, Bootstrap, web Design, Development, Responsive website, creative website"> 
+    <meta name="kwywords"
+        content="HTML5, CSS3, JQuery, Bootstrap, web Design, Development, Responsive website, creative website">
 
     <!-- fevicon -->
     <link rel="shortcut icon" href="img/favicon/favicon.ico">
@@ -90,7 +91,7 @@
 
                     <!-- mobile menu -->
                     <div id="mobile-nav">
-                        <!-- Mobile Menue Open Button --> 
+                        <!-- Mobile Menue Open Button -->
                         <span id="mobile-nav-close-btn">&times;</span>
                         <div id="mobile-nav-content">
 
@@ -831,7 +832,7 @@
             </div>
 
             <!-- Portfolio Items Wrapper -->
-            <Section id="portfolio-wrapper" class="wow fadeInUp"  data-wow-duration="1s"  data-wow-delay=".5s">
+            <Section id="portfolio-wrapper" class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 
                 <div class="container-fluid">
 
@@ -1254,7 +1255,7 @@
                             <div class="type">
                                 <h4>Basic</h4>
                             </div>
- 
+
                             <div class="price">
                                 <div class="row">
                                     <div class="col-md-4 col-sm-4 col-xs-4">
@@ -1629,7 +1630,7 @@
     </section>
     <!-- Blog End -->
 
-    
+
     <!-- Contact -->
     <section id="contact">
 
@@ -1769,7 +1770,8 @@
                 <div class="col-md-12">
 
                     <p>
-                        Copyright &copy; 2020 All Right Reserved By <span>SOLO Inl.</span>
+                        Copyright &copy; 2020 All Right Reserved By <span><a href="www.rezvee.com"
+                                target="_blank">www.rezvee.com</a></span>
                     </p>
                 </div>
 
@@ -1777,7 +1779,8 @@
         </div>
 
         <!-- back to top -->
-        <a href="#home" id="back-to-top" class="btn btn-sm btn-yellow btn-back-to-top hidden-sm hidden-xs" title="home" role="button">
+        <a href="#home" id="back-to-top" class="btn btn-sm btn-yellow btn-back-to-top hidden-sm hidden-xs" title="home"
+            role="button">
 
             <i class="fa fa-angle-up"></i>
 
@@ -1813,7 +1816,8 @@
     <script src="js/counter/jquery.counterup.min.js"></script>
 
     <!-- Google map js -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTvQQzglGUKwhoVJu2nbQWzXgP2TL0Y8o"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTvQQzglGUKwhoVJu2nbQWzXgP2TL0Y8o">
+    </script>
 
     <!-- WOW JS -->
     <script src="js/wow/wow.min.js"></script>
