updated copyright url

--- a/index.html
+++ b/index.html
@@ -1770,7 +1770,7 @@
                 <div class="col-md-12">
 
                     <p>
-                        Copyright &copy; 2020 All Right Reserved By <span><a href="www.rezvee.com"
+                        Copyright &copy; 2020 All Right Reserved By <span><a href="http://www.rezvee.com"
                                 target="_blank">www.rezvee.com</a></span>
                     </p>
                 </div>
